# zord

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
docs/: api.md  architecture.md  deployment.md  index.md  indexing.md  security.md
scripts/: check_integrity.py  rebuild_zrc20.sh  smoke_endpoints.py  validate_zrc20.py
src/: api.rs  db.rs  indexer.rs  main.rs  names.rs  rpc.rs  zmq.rs  zrc20.rs  zrc721.rs
web/: app.js  collection.html  collections.html  docs.html  index.html  names.html  names_zcash.html  names_zec.html  spec.html  styles.css  tokens.html  uptime.html
