[package]
name = "zord"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
description = "Zcash ordinal indexer for rare and exotic zats"
repository = "https://github.com/zatoshi/zord"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
redb = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
anyhow = "1.0"
tower = { version = "0.5", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-gzip", "compression-br", "compression-deflate", "compression-zstd"] }
zmq = "0.10"
futures = "0.3"
base64 = "0.21"
html-escape = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
